# Interciclo-Vision-por-Computador

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
Felipe/codigo/: CMakeLists.txt  compile_and_run.sh  main.cpp
Sami/: CMakeLists.txt
Sami/data/: L506_QD_3_1.CT.0003.0100.2015.12.22.20.45.42.541197.358793121.IMA
Sami/src/: main.cpp
code/: CMakeLists.txt  README.md  analyze_results.py  compile_linux.sh  compile_windows.bat  copy_dlls.bat  run.sh  run_explorer.sh  run_pipeline.sh  run_pipelines_windows.bat  run_specialized_pipelines.sh  slices.txt
code/models/: convertir_final.py  verificar_modelo.py
code/src/: explore_dataset.cpp  export_slices.cpp  export_slices_3_views.cpp  main.cpp  mainpipeline.cpp  pipeline_arterias.cpp  pipeline_huesos.cpp  pipeline_pulmones.cpp
code/src/f1_ui/: mainwindow.cpp  mainwindow.h
code/src/f1_ui/controllers/: metrics_controller.cpp  metrics_controller.h  morphology_controller.cpp  morphology_controller.h  preprocessing_controller.cpp  preprocessing_controller.h  segmentation_controller.cpp  segmentation_controller.h  visualization_controller.cpp  visualization_controller.h
code/src/f1_ui/helpers/: qt_opencv_helpers.cpp  qt_opencv_helpers.h
code/src/f2_io/: dataset_explorer.cpp  dataset_explorer.h
code/src/f3_preprocessing/: denoising.cpp  denoising.h  preprocessing.cpp  preprocessing.h
code/src/f4_segmentation/: segmentation.cpp  segmentation.h
code/src/f5_morphology/: morphology.cpp  morphology.h
code/src/f6_visualization/: visualization.cpp  visualization.h
code/src/utils/: itk_opencv_bridge.h
code2/: CMakeLists.txt  build.sh  build_and_run.sh  run.sh
code2/src/: main.cpp
code2/src/core/: dicom_reader.cpp  dicom_reader.h  itk_opencv_bridge.cpp  morphology.cpp  morphology.h  preprocessing.cpp  preprocessing.h  segmentation.cpp  segmentation.h
code2/src/core/docs/: DICOM_READER.md  ITK_OPENCV_BRIDGE.md  PREPROCESSING.md  README.md  SEGMENTATION.md
code2/src/core/img/: README.md
code2/src/models/: convertir_final.py  convertir_modelo.py  dncnn_grayscale.onnx  dncnn_grayscale.onnx.data  verificar_modelo.py
code2/src/server/: app.py  start_server.sh
code2/src/ui/: mainwindow.cpp  mainwindow.h
docs/: FASES_3_4_5_PREPARADAS.md  Guia.md  Pasos_Implementacion_Fase2  TODO.md  guia_fases_3_4_5.md
docs/docs/: MORPHOLOGY.md  servidor.md
src/: main.cpp
